Fix footer on mobile

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -363,4 +363,12 @@ blockquote {
 	.story table {
 		width: 90%;
 	}
+
+	footer {
+		font-size: 12px;
+
+		ul li {
+			margin-left: 38px;
+		}
+	}
 }
